--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "An experiment using Angular, Node, Mongo, Heroku.",
   "main": "server.js",
-  "engines":
-  {
+  "engines": {
     "node": "0.10.x"
   },
   "author": "",
@@ -14,11 +13,11 @@
     "errorhandler": "^1.1.1",
     "express": "^4.8.7",
     "method-override": "^2.1.3",
+    "mongodb": "^1.4.17",
     "mongojs": "^0.14.1"
   },
-  "repository":
-  {
-    "type":"git",
-    "url":"git@heroku.com:angular-node-mongo.git"
+  "repository": {
+    "type": "git",
+    "url": "git@heroku.com:angular-node-mongo.git"
   }
 }
